# gazebo-realsense

./: .gitignore  CMakeLists.txt  README.md
gzrs/: CMakeLists.txt  RealSensePlugin.cc  RealSensePlugin.hh  gzrs_plugin.cc  gzrs_plugin.hh
models/: CMakeLists.txt
models/realsense/: model.config  model.sdf
models/realsense_camera/: model.config
